@startuml ERD_Clean

skinparam backgroundColor white
skinparam classAttributeFontSize 16
skinparam classFontSize 18
skinparam arrowFontSize 14
skinparam linetype ortho
skinparam nodesep 120
skinparam ranksep 150
skinparam shadowing false
skinparam roundcorner 8
skinparam padding 10

class User {
  <b><color:red>● id : INTEGER</color></b>
  <color:green>◆ email : VARCHAR(254)</color>
  --
  name : VARCHAR(255)
  role : VARCHAR(20)
  phone : VARCHAR(50)
  profile_image : VARCHAR(100)
  biography : TEXT
  is_staff : BOOLEAN
  is_active : BOOLEAN
  two_factor_enabled : BOOLEAN
  two_factor_secret : VARCHAR(32)
  date_joined : DATETIME
  updated_at : DATETIME
}

class Student {
  <b><color:red>● student_id : INTEGER</color></b>
  <color:green>◆ admission_number : VARCHAR(50)</color>
  --
  full_name : VARCHAR(255)
  gender : VARCHAR(10)
  parent_name : VARCHAR(255)
  parent_email : VARCHAR(254)
  parent_phone : VARCHAR(20)
  status : VARCHAR(20)
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

class Classroom {
  <b><color:red>● class_id : INTEGER</color></b>
  <color:blue>○ form_master_id : INTEGER</color>
  --
  name : VARCHAR(50)
  academic_year : VARCHAR(20)
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

class Subject {
  <b><color:red>● subject_id : INTEGER</color></b>
  <color:green>◆ name : VARCHAR(100)</color>
  <color:green>◆ code : VARCHAR(20)</color>
  --
  created_at : DATETIME
}

class StudentEnrollment {
  <b><color:red>● enrollment_id : INTEGER</color></b>
  <color:blue>○ student_id : INTEGER</color>
  <color:blue>○ classroom_id : INTEGER</color>
  --
  academic_year : VARCHAR(20)
  enrollment_date : DATE
  is_active : BOOLEAN
}

class TeachingAssignment {
  <b><color:red>● assignment_id : INTEGER</color></b>
  <color:blue>○ teacher_id : INTEGER</color>
  <color:blue>○ subject_id : INTEGER</color>
  <color:blue>○ classroom_id : INTEGER</color>
  --
  is_active : BOOLEAN
  created_at : DATETIME
}

class AttendanceSession {
  <b><color:red>● session_id : INTEGER</color></b>
  <color:blue>○ classroom_id : INTEGER</color>
  <color:blue>○ subject_id : INTEGER</color>
  <color:blue>○ teacher_id : INTEGER</color>
  --
  attendance_date : DATE
  created_at : DATETIME
  updated_at : DATETIME
}

class AttendanceRecord {
  <b><color:red>● record_id : INTEGER</color></b>
  <color:blue>○ session_id : INTEGER</color>
  <color:blue>○ student_id : INTEGER</color>
  --
  status : VARCHAR(10)
  remarks : TEXT
  created_at : DATETIME
}

class StudentRiskProfile {
  <b><color:red>● student_id : INTEGER</color></b>
  --
  risk_score : DECIMAL(6,2)
  risk_level : VARCHAR(20)
  last_calculated : DATETIME
  created_at : DATETIME
}

class SubjectRiskInsight {
  <b><color:red>● student_id : INTEGER</color></b>
  <b><color:red>● subject_id : INTEGER</color></b>
  --
  total_sessions : INTEGER
  absence_count : INTEGER
  late_count : INTEGER
  absence_rate : DECIMAL(5,2)
  last_calculated : DATETIME
  created_at : DATETIME
}

class Alert {
  <b><color:red>● alert_id : INTEGER</color></b>
  <color:blue>○ student_id : INTEGER</color>
  <color:blue>○ subject_id : INTEGER</color>
  <color:blue>○ assigned_to : INTEGER</color>
  --
  alert_type : VARCHAR(20)
  risk_level : VARCHAR(20)
  status : VARCHAR(20)
  escalated_to_admin : BOOLEAN
  alert_date : DATETIME
  updated_at : DATETIME
}

class InterventionCase {
  <b><color:red>● case_id : INTEGER</color></b>
  <color:blue>○ student_id : INTEGER</color>
  <color:blue>○ alert_id : INTEGER</color>
  <color:blue>○ assigned_to : INTEGER</color>
  --
  status : VARCHAR(30)
  progress_status : VARCHAR(20)
  follow_up_date : DATE
  meeting_date : DATE
  meeting_notes : TEXT
  resolution_notes : TEXT
  escalation_reason : TEXT
  version : INTEGER
  created_at : DATETIME
  updated_at : DATETIME
}

class InterventionMeeting {
  <color:blue>○ student_id : INTEGER</color>
  <color:blue>○ created_by : INTEGER</color>
  --
  meeting_date : DATE
  absence_reason : TEXT
  root_cause : VARCHAR(20)
  intervention_notes : TEXT
  action_plan : TEXT
  follow_up_date : DATE
  urgency_level : VARCHAR(10)
  status : VARCHAR(20)
  created_at : DATETIME
  updated_at : DATETIME
}

class ProgressUpdate {
  <color:blue>○ meeting_id : INTEGER</color>
  <color:blue>○ created_by : INTEGER</color>
  --
  update_text : TEXT
  created_at : DATETIME
}

class Message {
  <color:blue>○ sender_id : INTEGER</color>
  <color:blue>○ recipient_id : INTEGER</color>
  --
  subject : VARCHAR(200)
  message : TEXT
  is_read : BOOLEAN
  created_at : DATETIME
  read_at : DATETIME
}

User "1" -- "0..*" Classroom : form_master
User "1" -- "0..*" TeachingAssignment : teacher
User "1" -- "0..*" AttendanceSession : teacher
User "1" -- "0..*" Alert : assigned_to
User "1" -- "0..*" InterventionCase : assigned_to
User "1" -- "0..*" InterventionMeeting : created_by
User "1" -- "0..*" ProgressUpdate : created_by
User "1" -- "0..*" Message : sender
User "1" -- "0..*" Message : recipient

Student "1" -- "1" StudentRiskProfile
Student "1" -- "0..*" StudentEnrollment
Student "1" -- "0..*" AttendanceRecord
Student "1" -- "0..*" SubjectRiskInsight
Student "1" -- "0..*" Alert
Student "1" -- "0..*" InterventionCase
Student "1" -- "0..*" InterventionMeeting

Classroom "1" -- "0..*" StudentEnrollment
Classroom "1" -- "0..*" TeachingAssignment
Classroom "1" -- "0..*" AttendanceSession

Subject "1" -- "0..*" TeachingAssignment
Subject "1" -- "0..*" AttendanceSession
Subject "1" -- "0..*" SubjectRiskInsight
Subject "1" -- "0..*" Alert

AttendanceSession "1" -- "0..*" AttendanceRecord

Alert "1" -- "0..*" InterventionCase
InterventionMeeting "1" -- "0..*" ProgressUpdate

@enduml
